HW2/error.log
/home/osc/OperatingSystems/HW2/hello.c: In function ‘generate_maze’:
/home/osc/OperatingSystems/HW2/hello.c:10:17: error: storage size of ‘selectedCell’ isn’t known
     struct Cell selectedCell; // Declare here
                 ^
/home/osc/OperatingSystems/HW2/hello.c:13:13: error: implicit declaration of function ‘kmalloc’ [-Werror=implicit-function-declaration]
     cells = kmalloc(MAZE_WIDTH * MAZE_HEIGHT * sizeof(struct Cell), GFP_KERNEL);
             ^
/home/osc/OperatingSystems/HW2/hello.c:13:21: error: ‘MAZE_WIDTH’ undeclared (first use in this function)
     cells = kmalloc(MAZE_WIDTH * MAZE_HEIGHT * sizeof(struct Cell), GFP_KERNEL);
                     ^
/home/osc/OperatingSystems/HW2/hello.c:13:21: note: each undeclared identifier is reported only once for each function it appears in
/home/osc/OperatingSystems/HW2/hello.c:13:34: error: ‘MAZE_HEIGHT’ undeclared (first use in this function)
     cells = kmalloc(MAZE_WIDTH * MAZE_HEIGHT * sizeof(struct Cell), GFP_KERNEL);
                                  ^
/home/osc/OperatingSystems/HW2/hello.c:13:55: error: invalid application of ‘sizeof’ to incomplete type ‘struct Cell’
     cells = kmalloc(MAZE_WIDTH * MAZE_HEIGHT * sizeof(struct Cell), GFP_KERNEL);
                                                       ^
/home/osc/OperatingSystems/HW2/hello.c:13:69: error: ‘GFP_KERNEL’ undeclared (first use in this function)
     cells = kmalloc(MAZE_WIDTH * MAZE_HEIGHT * sizeof(struct Cell), GFP_KERNEL);
                                                                     ^
/home/osc/OperatingSystems/HW2/hello.c:25:5: error: invalid use of undefined type ‘struct Cell’
     cells[cellCount++] = (struct Cell){1, 1, false};
     ^
/home/osc/OperatingSystems/HW2/hello.c:25:10: error: dereferencing pointer to incomplete type ‘struct Cell’
     cells[cellCount++] = (struct Cell){1, 1, false};
          ^
/home/osc/OperatingSystems/HW2/hello.c:25:40: warning: excess elements in struct initializer
     cells[cellCount++] = (struct Cell){1, 1, false};
                                        ^
/home/osc/OperatingSystems/HW2/hello.c:25:40: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:25:43: warning: excess elements in struct initializer
     cells[cellCount++] = (struct Cell){1, 1, false};
                                           ^
/home/osc/OperatingSystems/HW2/hello.c:25:43: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:25:46: error: ‘false’ undeclared (first use in this function)
     cells[cellCount++] = (struct Cell){1, 1, false};
                                              ^
/home/osc/OperatingSystems/HW2/hello.c:25:46: warning: excess elements in struct initializer
/home/osc/OperatingSystems/HW2/hello.c:25:46: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:25:34: error: invalid use of undefined type ‘struct Cell’
     cells[cellCount++] = (struct Cell){1, 1, false};
                                  ^
/home/osc/OperatingSystems/HW2/hello.c:30:21: error: implicit declaration of function ‘prandom_u32’ [-Werror=implicit-function-declaration]
         randIndex = prandom_u32() % cellCount;
                     ^
/home/osc/OperatingSystems/HW2/hello.c:31:9: error: invalid use of undefined type ‘struct Cell’
         selectedCell = cells[randIndex]; // Assign to the declared variable
         ^
/home/osc/OperatingSystems/HW2/hello.c:32:9: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
         int x = selectedCell.x;
         ^
/home/osc/OperatingSystems/HW2/hello.c:34:9: error: invalid use of undefined type ‘struct Cell’
         cells[randIndex] = cells[--cellCount]; // Remove from list
         ^
/home/osc/OperatingSystems/HW2/hello.c:34:9: error: invalid use of undefined type ‘struct Cell’
/home/osc/OperatingSystems/HW2/hello.c:38:13: error: invalid use of undefined type ‘struct Cell’
             cells[cellCount++] = (struct Cell){x - 1, y, false};
             ^
/home/osc/OperatingSystems/HW2/hello.c:38:48: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x - 1, y, false};
                                                ^
/home/osc/OperatingSystems/HW2/hello.c:38:48: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:38:55: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x - 1, y, false};
                                                       ^
/home/osc/OperatingSystems/HW2/hello.c:38:55: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:38:58: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x - 1, y, false};
                                                          ^
/home/osc/OperatingSystems/HW2/hello.c:38:58: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:38:42: error: invalid use of undefined type ‘struct Cell’
             cells[cellCount++] = (struct Cell){x - 1, y, false};
                                          ^
/home/osc/OperatingSystems/HW2/hello.c:42:13: error: invalid use of undefined type ‘struct Cell’
             cells[cellCount++] = (struct Cell){x + 1, y, false};
             ^
/home/osc/OperatingSystems/HW2/hello.c:42:48: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x + 1, y, false};
                                                ^
/home/osc/OperatingSystems/HW2/hello.c:42:48: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:42:55: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x + 1, y, false};
                                                       ^
/home/osc/OperatingSystems/HW2/hello.c:42:55: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:42:58: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x + 1, y, false};
                                                          ^
/home/osc/OperatingSystems/HW2/hello.c:42:58: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:42:42: error: invalid use of undefined type ‘struct Cell’
             cells[cellCount++] = (struct Cell){x + 1, y, false};
                                          ^
/home/osc/OperatingSystems/HW2/hello.c:46:13: error: invalid use of undefined type ‘struct Cell’
             cells[cellCount++] = (struct Cell){x, y - 1, false};
             ^
/home/osc/OperatingSystems/HW2/hello.c:46:48: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x, y - 1, false};
                                                ^
/home/osc/OperatingSystems/HW2/hello.c:46:48: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:46:51: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x, y - 1, false};
                                                   ^
/home/osc/OperatingSystems/HW2/hello.c:46:51: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:46:58: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x, y - 1, false};
                                                          ^
/home/osc/OperatingSystems/HW2/hello.c:46:58: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:46:42: error: invalid use of undefined type ‘struct Cell’
             cells[cellCount++] = (struct Cell){x, y - 1, false};
                                          ^
/home/osc/OperatingSystems/HW2/hello.c:50:13: error: invalid use of undefined type ‘struct Cell’
             cells[cellCount++] = (struct Cell){x, y + 1, false};
             ^
/home/osc/OperatingSystems/HW2/hello.c:50:48: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x, y + 1, false};
                                                ^
/home/osc/OperatingSystems/HW2/hello.c:50:48: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:50:51: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x, y + 1, false};
                                                   ^
/home/osc/OperatingSystems/HW2/hello.c:50:51: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:50:58: warning: excess elements in struct initializer
             cells[cellCount++] = (struct Cell){x, y + 1, false};
                                                          ^
/home/osc/OperatingSystems/HW2/hello.c:50:58: note: (near initialization for ‘(anonymous)’)
/home/osc/OperatingSystems/HW2/hello.c:50:42: error: invalid use of undefined type ‘struct Cell’
             cells[cellCount++] = (struct Cell){x, y + 1, false};
                                          ^
/home/osc/OperatingSystems/HW2/hello.c:59:5: error: implicit declaration of function ‘kfree’ [-Werror=implicit-function-declaration]
     kfree(cells);
     ^
/home/osc/OperatingSystems/HW2/hello.c:10:17: warning: unused variable ‘selectedCell’ [-Wunused-variable]
     struct Cell selectedCell; // Declare here
                 ^
/home/osc/OperatingSystems/HW2/hello.c: At top level:
/home/osc/OperatingSystems/HW2/hello.c:6:13: warning: ‘generate_maze’ defined but not used [-Wunused-function]
 static void generate_maze(char *maze) {
             ^
cc1: some warnings being treated as errors
make[2]: *** [/home/osc/OperatingSystems/HW2/hello.o] Error 1
make[1]: *** [_module_/home/osc/OperatingSystems/HW2] Error 2
make: *** [all] Error 2
